UserServiceTest in user-service finished